--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "add-contributors": "all-contributors add",
     "test": "protractor typeScript/config/config.js",
     "generate-contributors": "all-contributors generate",
-    "bdd": "npm run clean-build && protractor typeScript/config/config.js",
+    "bdd": "npm run clean-build && protractor typeScript/config/config.js && node typeScript/report/index.js",
     "webdriver-update": "webdriver-manager update --ignore_ssl",
     "webdriver-start": "webdriver-manager start --ignore_ssl",
     "report": "node typeScript/report/index.js"
