--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "clean-build": "npm run clean && npm run build",
     "init-contributors": "all-contributors init",
     "add-contributors": "all-contributors add",
-    "test": "protractor typeScript/config/config.js || exit 0",
+    "test": "protractor typeScript/config/config.js",
     "generate-contributors": "all-contributors generate",
     "bdd": "npm run clean-build && protractor typeScript/config/config.js",
     "webdriver-update": "webdriver-manager update --ignore_ssl",
     "webdriver-start": "webdriver-manager start --ignore_ssl",
-    "report": "node typeScript/report/index.js",
-    "posttest": "node typeScript/report/index.js"
+    "report": "node typeScript/report/index.js"
   },
   "devDependencies": {
     "@types/cucumber": "^6.0.1",
