--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "clean-build": "npm run clean && npm run build",
     "init-contributors": "all-contributors init",
     "add-contributors": "all-contributors add",
-    "test" : "protractor typeScript/config/config.js",
+    "test1": "protractor typeScript/config/config.js --cucumberOpts.tags=@smoke --suite=vdpprotectionproducts --params.url=https://smartpath.autonationtoyotalasvegas.com/ --params.dealerCd=27021 --params.source=t3 --params.fname=mickey --params.lname=mouse --params.caemailreg=dataso514354934216@leafzie.com --params.capwdreg=ToyotaTester123! --params.caemailnew=pdumlrtr12953219@leafzie.com --params.capwdnew=ToyotaTester123! --params.caphonenew=9881299589 --params.zipcode=89146 --params.usemail=danat75521333456213@dvdoto.com --params.seemail=danat755213336723158@dvdoto.com --params.cdemail=danat7552133342859@dvdoto.com --params.browserPlatformCombo=SafariIOS",
+    "test2": "protractor typeScript/config/config.js --cucumberOpts.tags=@regression --suite=createaccount,vdpvehicleinfo --params.url=https://smartpath.autonationtoyotalasvegas.com/ --params.dealerCd=27021 --params.source=t3 --params.fname=mickey --params.lname=mouse --params.caemailreg=dataso514354934216@leafzie.com --params.capwdreg=ToyotaTester123! --params.caemailnew=pdumlrtr12953219@leafzie.com --params.capwdnew=ToyotaTester123! --params.caphonenew=9881299589 --params.zipcode=89146 --params.usemail=danat75521333456213@dvdoto.com --params.seemail=danat755213336723158@dvdoto.com --params.cdemail=danat7552133342859@dvdoto.com --params.browserPlatformCombo=ChromeDesktop",
+    "test3": "protractor typeScript/config/config.js --suite=checkout --params.url=https://smartpath.myalexandertoyota.com/ --params.dealerCd=02037 --params.source=t3 --params.fname=mickey --params.lname=mouse --params.caemailreg=smartpathtester@gmail.com --params.capwdreg=ToyotaTester123! --params.caemailnew=pdumdrufreslrtr12953219@leafzie.com --params.capwdnew=ToyotaTester123! --params.caphonenew=9881299529 --params.zipcode=85365 --params.usemail=danat75521333456213@dvdoto.com --params.seemail=danat755213336723158@dvdoto.com --params.cdemail=danat7552133342859@dvdoto.com --params.browserPlatformCombo=ChromeDesktop",
+    
+    "test": "protractor typeScript/config/config.js",
     "generate-contributors": "all-contributors generate",
     "bdd": "npm run clean-build && protractor typeScript/config/config.js",
     "webdriver-update": "webdriver-manager update --ignore_ssl",
@@ -55,6 +59,9 @@
     "chromedriver": "^85.0.0",
     "cucumber": "^5.1.0",
     "https-proxy-agent": "^5.0.0",
+    "jasmine": "^4.6.0",
+    "jasmine-tagged": "^1.1.4",
+    "jasmine2-tagged": "^1.1.1",
     "mkdirp": "^1.0.4",
     "multiple-cucumber-html-reporter": "^1.18.0",
     "protractor": "^7.0.0",
